# cwzCore

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
deprecated/: initfs.c
docs/: build.md  os.md
kernel/: CMakeLists.txt
kernel/arch/: CMakeLists.txt
kernel/arch/ia32/: CMakeLists.txt  start.S
kernel/arch/ia32/boot/: CMakeLists.txt
kernel/arch/ia32/boot/include/: elf64.h
kernel/arch/ia32/boot/init/: boot.S  boot.asm  main.c
kernel/arch/ia32/loader/: CMakeLists.txt  loader.S  loader.asm  main.c
kernel/boot/: boot.asm
kernel/common/: color.h  common.h  io.h
kernel/drivers/: CMakeLists.txt  io.c
kernel/drivers/tui/: port.c  tui.c
kernel/drivers/tui/include/: port.h  tui.h
kernel/fs/: CMakeLists.txt  inode_manager.c
kernel/fs/include/: extent_protocol.h  inode_manager.h
kernel/libc/: CMakeLists.txt
kernel/libc/include/: stdarg.h  stddef.h  stdint.h  stdio.h
kernel/libc/src/stdio/: vsprintf.c
kernel/libc/src/stdlib/: strtol.c
pkg/: readme.txt
pkg/deprecated/boot/: boot0.S  boot2.S
pkg/deprecated/loader/: CMakeLists.txt  loader.ld
pkg/deprecated/loader/src/: loader2.S  main.c
pkg/deprecated/sign/: CMakeLists.txt
scripts/: helper.sh
scripts/cmake/: BuildRootfs.cmake  KernelTools.cmake
scripts/cmake/Modules/: Basic.cmake
src/: CMakeLists.txt
src/arch/: CMakeLists.txt
src/arch/ia32/: CMakeLists.txt  init.c  kernel.ld  start.S
src/arch/ia32/boot/: CMakeLists.txt  boot.ld
src/arch/ia32/boot/include/: asm.h  defs.h  elf64.h
src/arch/ia32/boot/loader/: CMakeLists.txt  loader.ld
src/arch/ia32/boot/loader/src/: loader.S  main.c
src/arch/ia32/boot/src/: boot.S  boot0.S  boot2.S  main.c
src/arch/ia32/boot/start/: CMakeLists.txt  boot.ld
src/arch/ia32/boot/start/src/: boot.S
src/arch/ia32/include/: asm.h
src/arch/ia32/loader/: CMakeLists.txt
src/arch/ia32/loader/src/: loader2.S  main.c
src/arch/ia32/port/: port.c  port.h
src/drivers/: CMakeLists.txt
src/drivers/tui/: tui.c
src/drivers/tui/include/: tui.h
src/fs/fat32/: fat32.h
src/include/: color.h  common.h  io.h
src/kernel/: CMakeLists.txt  io.c
src/libc/: CMakeLists.txt
src/libc/include/: assert.h  ctype.h  float.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
src/libc/src/math/: math.c
src/libc/src/stdio/: vsprintf.c
src/libc/src/stdlib/: atoi.c  itoa.c  strtol.c
src/libc/src/string/: string.c
src/tools/: CMakeLists.txt
src/tools/mkfat32/: .gitignore  CMakeLists.txt  README.md  diskio.c  main.c
src/tools/mkfat32/fatfs/: ff.c  ff.h
test/: CMakeLists.txt
test/call_test/: app  func.s  main  main.c  main.s
test/cmp_str/: 1.S  1.asm  a.S
test/loader_test/: bootloader.asm
test/print_str/: 1.S  2.S  boot.asm
test/readfat/: CMakeLists.txt  fat12.h  fat32.h  main  main.c
test/spkernel/: boot.S
tools/: CMakeLists.txt
tools/mkfat32/: Makefile
tools/mkfat32/fatfs/: ffconf.h
tools/sign/: sign.c
